@@ -103,8 +103,9 @@ ags_notation_editor_resize_pads_callback(AgsMachine *machine, GType channel_type
   g_object_set(notation_editor->scrolled_piano->piano,
 	       "key-count", pads,
 	       NULL);
+  gtk_widget_queue_resize((GtkWidget *) notation_editor->scrolled_piano->piano);
   gtk_widget_queue_draw((GtkWidget *) notation_editor->scrolled_piano->piano);
-
+  
   /*  */
   gtk_widget_queue_draw((GtkWidget *) notation_editor->notation_edit);
 }
